# flatbuffers

docs/source/: RustUsage.md
go/: builder.go  table.go
include/flatbuffers/: idl.h
rust/: Cargo.toml
rust/flatbuffers/: Cargo.toml
rust/flatbuffers/src/: builder.rs  endian_scalar.rs  follow.rs  follow_impls.rs  lib.rs  mod.rs  primitives.rs  push.rs  table.rs  vector.rs  vtable.rs  vtable_writer.rs
rust/tests/: integration_test.rs  monster_test_generated.rs
rust/tests/generated_code/namespace_test/: namespace_test1_generated.rs  namespace_test2_generated.rs
rust/tests/namespace_test/: namespace_test1_generated.rs  namespace_test2_generated.rs
src/: code_generators.cpp  flatc_main.cpp  idl_gen_rust.cpp
tests/: RustTest.sh  generate_code.sh  go_test.go  monster_test.bfbs  monster_test.fbs  monster_test.schema.json  monster_test_generated.h  monster_test_generated.js  monster_test_generated.lobster  monster_test_generated.rs  monster_test_generated.ts  monster_test_my_game.example_generated.dart
tests/MyGame/Example/: Monster.cs  Monster.go  Monster.java  Monster.lua  Monster.php  Monster.py
tests/namespace_test/: namespace_test1_generated.rs  namespace_test2_generated.rs
tests/rust_usage_test/: Cargo.toml
tests/rust_usage_test/benches/: flatbuffers_benchmarks.rs
tests/rust_usage_test/src/: lib.rs  monster_test_generated.rs  usage_test.rs
tests/rust_usage_test/src/namespace_test/: mod.rs  namespace_test1_generated.rs  namespace_test2_generated.rs
tests/rust_usage_test/tests/: integration_test.rs
