[package]
name = "rust_usage_test"
version = "0.1.0"
authors = ["Robert Winslow <me@rwinslow.com>", "FlatBuffers Maintainers"]

[dependencies]
flatbuffers = { path = "../../rust/flatbuffers" }

[[bin]]
name = "monster_example"
path = "bin/monster_example.rs"


[dev-dependencies]
quickcheck = "0.6"
# TODO(rw): look into moving to criterion.rs once its (I think?) compilation
#           issue is fixed with 0.2.4.
bencher = "0.1.5"

[[bench]]
# setup for bencher
name = "flatbuffers_benchmarks"
harness = false
